work: player info command