@@ -2,15 +2,15 @@ package net.lortservers.iris.commands;
 
 import cloud.commandframework.Command;
 import cloud.commandframework.CommandManager;
+import cloud.commandframework.bukkit.parsers.PlayerArgument;
 import net.lortservers.iris.managers.PunishmentManager;
-import net.lortservers.iris.utils.PunishmentManagerImpl;
-import org.screamingsandals.lib.player.PlayerWrapper;
-import org.screamingsandals.lib.plugin.ServiceManager;
+import net.lortservers.iris.utils.Protocol;
+import net.lortservers.iris.utils.ProtocolUtils;
+import org.screamingsandals.lib.player.PlayerMapper;
 import org.screamingsandals.lib.sender.CommandSenderWrapper;
 import org.screamingsandals.lib.sender.permissions.SimplePermission;
 import org.screamingsandals.lib.utils.annotations.Service;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
@@ -20,17 +20,12 @@ import java.util.Optional;
 @Service(dependsOn = {
         PunishmentManager.class
 })
-public class AlertsCommand extends BaseCommand {
-    /**
-     * <p>Boolean to on/off abbreviations.</p>
-     */
-    private static final Map<Boolean, String> BOOL_ABBR = Map.of(true, "on", false, "off");
-
+public class PlayerInfoCommand extends BaseCommand {
     /**
      * <p>Constructs the command.</p>
      */
-    public AlertsCommand() {
-        super("alerts", SimplePermission.of("iris.alerts"), false);
+    public PlayerInfoCommand() {
+        super("player", SimplePermission.of("iris.playerinfo"), true);
     }
 
     /**
@@ -43,17 +38,12 @@ public class AlertsCommand extends BaseCommand {
     protected void construct(Command.Builder<CommandSenderWrapper> commandSenderWrapperBuilder, CommandManager<CommandSenderWrapper> manager) {
         manager.command(
                 commandSenderWrapperBuilder
+                        .argument(PlayerArgument.of("player"))
                         .handler(commandContext -> {
-                            final Optional<Boolean> now = ServiceManager.get(PunishmentManagerImpl.class).toggleAlerts(commandContext.getSender().as(PlayerWrapper.class));
-
-                            if (now.isEmpty()) {
-                                commandContext.getSender().sendMessage(
-                                        config().getMessage("noPermission")
-                                );
-                                return;
-                            }
+                            final Optional<Protocol> proto = ProtocolUtils.getProtocol(PlayerMapper.wrapPlayer(commandContext.get("player")).getProtocolVersion());
+                            final String protocolString = (proto.isPresent()) ? proto.orElseThrow().getVersion() + " (" + proto.orElseThrow().getMinecraftVersion() + ")" : "Unknown";
                             commandContext.getSender().sendMessage(
-                                    config().getMessage("alertsToggle", Collections.singletonMap("status", BOOL_ABBR.get(now.orElseThrow())))
+                                    config().getMessage("playerInfo", Map.of("protocol", protocolString))
                             );
                         })
         );
